--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
             "client"
         ]
     },
+    "prefer-stable": true,
+    "minimum-stability": "dev",
     "config": {
         "allow-plugins": {
             "composer/installers": true,
